feat: compare ok
